# protoTrees

./: .gitignore  Makefile  package-lock.json  package.json  pyproject.toml  treeClient.js  tree_client.py  tree_server.py
definitions/: tree.proto  tree_pb2.py
